--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -201,3 +201,13 @@ d4）使用计数器组件和互斥条件组件遍历查询到的未支付订单
 ##### 图2-203 遍历完成流转条件
 
 e）开始遍历流程：
+
+e1）使用单函数组件调用函数addMinute(Date sourceDate,int addValue)，获取当前计数器索引值指向未支付订单的最后支付时间，需传入当前计数器索引值指向未支付订单的创建时间以及支付超时时间，本案例的支付超时时间设置为30分钟，如图2-205所示：
+
+![2-204](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-22.png)
+
+##### 图2-204 单函数组件【获取未支付订单的最后支付时间】
+
+![2-205](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-23.png)
+
+##### 图2-205 组件配置
