--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -211,3 +211,13 @@ e1）使用单函数组件调用函数addMinute(Date sourceDate,int addValue)，
 ![2-205](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-23.png)
 
 ##### 图2-205 组件配置
+
+##### 说明：在设置参数“当前计数器索引值指向未支付订单的创建时间”时需进行多次选择，首先选中“查询未支付订单”页签中查询结果单条记录“选择流程变量”选项，如图2-206所示，进入下一个参数选择页面，选择“遍历未支付订单”页签下的当前计数器索引，如图2-207所示，最后回到“查询未支付订单”页签，选择createTime（创建时间）即可，如图2-208所示：
+
+![2-206](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-24.png)
+
+##### 图2-206 选择流程变量
+
+![2-207](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-25.png)
+
+##### 图2-207 选择当前计数器索引值
