--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -221,3 +221,13 @@ e1）使用单函数组件调用函数addMinute(Date sourceDate,int addValue)，
 ![2-207](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-25.png)
 
 ##### 图2-207 选择当前计数器索引值
+
+![2-208](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-26.png)
+
+##### 图2-208 选择创建时间字段
+
+e2）使用单函数组件调用函数getCurrDateTime()获取当前系统时间，如图2-209、图2-210所示：
+
+![2-209](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-27.png)
+
+##### 图2-209 单函数组件【获取当前系统时间】
