--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -241,3 +241,11 @@ e3）使用互斥条件组件判断当前未支付订单是否支付超时，若
 ![2-211](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-29.png)
 
 ##### 图2-211 判断当前未支付订单是否支付超时流程
+
+![2-212](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-30.png)
+
+##### 图2-212 支付超时流转条件
+
+![2-213](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-31.png)
+
+##### 图2-213 支付未超时流转条件
