--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -249,3 +249,13 @@ e3）使用互斥条件组件判断当前未支付订单是否支付超时，若
 ![2-213](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-31.png)
 
 ##### 图2-213 支付未超时流转条件
+
+e4）支付超时流程：使用单SQL组件删除当前未支付订单，需传入当前计数器索引值指向的未支付订单，具体SQL内容如图2-216所示：
+
+![2-214](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-32.png)
+
+##### 图2-214 单SQL组件【删除当前未支付订单】
+
+![2-215](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-33.png)
+
+##### 图2-215 组件配置
