--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -259,3 +259,13 @@ e4）支付超时流程：使用单SQL组件删除当前未支付订单，需传
 ![2-215](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-33.png)
 
 ##### 图2-215 组件配置
+
+![2-216](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-34.png)
+
+##### 图2-216 删除当前未支付订单的SQL内容
+
+##### 说明：在设置参数“当前计数器索引值指向的未支付订单”时同样需要进行多次选择，首先选中“查询未支付订单”页签中查询结果单条记录“选择流程变量”选项，如图2-217所示，进入下一个参数选择页面，选择“遍历未支付订单”页签下的当前计数器索引，如图2-218所示，最后回到“查询未支付订单”页签，选择当前单条SQL记录即可，如图2-219所示：
+
+![2-217](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-35.png)
+
+##### 图2-217 选择流程变量
