--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -269,3 +269,15 @@ e4）支付超时流程：使用单SQL组件删除当前未支付订单，需传
 ![2-217](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-35.png)
 
 ##### 图2-217 选择流程变量
+
+![2-218](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-36.png)
+
+##### 图2-218 选择当前计数器索引值
+
+![2-219](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-37.png)
+
+##### 图2-219 选择当前计数器索引值指向的未支付订单记录
+
+e5）支付超时流程：再次使用赋值组件将需删除的未支付且超过支付时间的订单数目加1，继续遍历下一条数据，如图2-220、图2-221、图2-222所示：
+
+![2-220](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-38.png)
