--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -281,3 +281,13 @@ e4）支付超时流程：使用单SQL组件删除当前未支付订单，需传
 e5）支付超时流程：再次使用赋值组件将需删除的未支付且超过支付时间的订单数目加1，继续遍历下一条数据，如图2-220、图2-221、图2-222所示：
 
 ![2-220](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-38.png)
+
+##### 图2-220 赋值组件【需删除的未支付且超过支付时间的订单数目+1】
+
+![2-221](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-39.png)
+
+##### 图2-221 选择数据模型
+
+![2-222](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-40.png)
+
+##### 图2-222 组件配置
