--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -291,3 +291,13 @@ e5）支付超时流程：再次使用赋值组件将需删除的未支付且超
 ![2-222](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-40.png)
 
 ##### 图2-222 组件配置
+
+f）遍历完成流程：输出需删除的未支付且超过支付时间的订单数目，结束流程。
+
+![2-223](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-41.png)
+
+##### 图2-223 输出结果组件【输出删除的未支付订单数】
+
+![2-224](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-42.png)
+
+##### 图2-224 组件配置
