--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -323,3 +323,15 @@ h）提交定时任务
 ##### 图2-227 提交定时任务
 
 i）执行定时任务
+
+i1）单击“执行任务”，检验该定时任务是否可以实现预期功能，如图2-228所示：
+
+##### 说明：若点击启动任务，则该定时任务将会根据Corn表达式的设置每五分钟执行一次。
+
+![2-228](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-46.png)
+
+##### 图2-228 执行定时任务
+
+i2）通过测试用例响应内容查看定时任务的执行结果，同时查看数据库中订单表的数据是否发生了变化，如图2-229所示：
+
+![2-229](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-47.png)
