--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/2. 电商平台应用/4. 订单超时自动删除.md
@@ -335,3 +335,11 @@ i1）单击“执行任务”，检验该定时任务是否可以实现预期功
 i2）通过测试用例响应内容查看定时任务的执行结果，同时查看数据库中订单表的数据是否发生了变化，如图2-229所示：
 
 ![2-229](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-47.png)
+
+##### 图2-229 查看响应内容
+
+i3）若定时任务的执行结果出现错误或数据库中订单表中的数据未出现预期变化，您也可以通过查看可视化日志进行调试，如图2-230所示：
+
+![2-230](https://www.feisuanyz.com/fsimage/alcj-image/orderdelete/5-48.png)
+
+##### 图2-230 查看可视化日志
