--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -1,1 +1,7 @@
-test
+### 3. Excel文件解析
+
+#### 3.1 Excel文件解析
+
+Excel文件解析，主要是利用全自动开发平台上传Excel文件（例如：一份打卡记录表），通过读取并解析出Excel文件中的内容，对Excel文件中的数据进行处理，输出我们想要的内容（本案例具体表现为：输出员工的上班时间）。案例综合使用了全自动开发平台中的单函数、计数器、互斥条件等组件以及相关函数进行接口流程图设计，通过流程图我们可以清晰地看出功能的实现逻辑，便捷好用，体现了全自动开发平台的独特优势。
+
+##### 3.1.1 效果展示
