--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -5,3 +5,16 @@
 Excel文件解析，主要是利用全自动开发平台上传Excel文件（例如：一份打卡记录表），通过读取并解析出Excel文件中的内容，对Excel文件中的数据进行处理，输出我们想要的内容（本案例具体表现为：输出员工的上班时间）。案例综合使用了全自动开发平台中的单函数、计数器、互斥条件等组件以及相关函数进行接口流程图设计，通过流程图我们可以清晰地看出功能的实现逻辑，便捷好用，体现了全自动开发平台的独特优势。
 
 ##### 3.1.1 效果展示
+
+a）上传的Excel文件内容：一份打卡记录表，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_1.png)
+
+##### 图3-1 Excel文件
+
+b）经平台读取并解析后的输出结果：展示出每名员工的上班时间，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_2.png)
+
+##### 图3-2 展示上班时间
+
