--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -25,3 +25,13 @@ a）上传的Excel文件内容：一份打卡记录表，如图3-3所示：
 ![3-3](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_3.png)
 
 ##### 图3-3 流程图
+
+##### 3.1.3 操作步骤
+
+a）在全自动开发平台新增一个接口，填写接口的基本信息，如图3-4所示：
+
+![3-4](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_4.png)
+
+##### 图3-4 填写基本信息
+
+b）配置接口的入口参数file（字段类型为File），用于上传Excel文件，如图3-5所示：
