--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -55,3 +55,13 @@ d1）单函数组件【读取Excel文件】： 使用的函数为getNormalExcelD
 ![3-7](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_8.png)
 
 ##### 图3-7 单函数组件
+
+![3-8](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_9.png)
+
+##### 图3-8 填写数据
+
+![3-9](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_10.png)
+
+##### 图3-9 函数描述
+
+d2）单函数组件【获取Excel文件的记录条数】： 使用的函数为listSize(List sourceList)，用于获取List大小，需传入单函数组件【读取Excel文件】获取到的Excel记录集合list，如下图所示。
