--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -65,3 +65,15 @@ d1）单函数组件【读取Excel文件】： 使用的函数为getNormalExcelD
 ##### 图3-9 函数描述
 
 d2）单函数组件【获取Excel文件的记录条数】： 使用的函数为listSize(List sourceList)，用于获取List大小，需传入单函数组件【读取Excel文件】获取到的Excel记录集合list，如下图所示。
+
+![3-10](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_11.png)
+
+##### 图3-10 单函数组件
+
+![3-11](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_12.png)
+
+##### 图3-11 填写数据
+
+d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时间】字段的首个打卡时间，最后按所需格式拼接获取的内容，如图3-12所示：
+
+![3-12](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_16.png)
