--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -77,3 +77,13 @@ d2）单函数组件【获取Excel文件的记录条数】： 使用的函数为
 d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时间】字段的首个打卡时间，最后按所需格式拼接获取的内容，如图3-12所示：
 
 ![3-12](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_16.png)
+
+##### 图3-12 遍历流程图
+
+计数器组件【遍历Excel记录集合】： 循环流程变量引用单函数组件【读取Excel文件】获取到的Excel记录集合List，操作符选择递增，如图3-13所示：
+
+##### 说明：循环流程变量一般为一个集合对象或数组对象，用于遍历。
+
+![3-13](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_17.png)
+
+##### 图3-13 循环流程变量设置
