--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -87,3 +87,13 @@ d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时
 ![3-13](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_17.png)
 
 ##### 图3-13 循环流程变量设置
+
+互斥条件组件【判断是否遍历完成】： 通过比较当前计数器索引值和Excel记录集合list大小，形成两条顺序流。若当前计数器索引值小于Excel记录集合list大小，说明遍历未完成，需要继续执行遍历流程；若当前计数器索引值大于或等于Excel记录集合list大小，说明Excel记录集合遍历完成，可以执行输出结果流程，顺序流的流转条件设置如图3-14（遍历未完成）、图3-15（遍历完成）所示：
+
+![3-14](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_18.png)
+
+##### 图3-14 遍历未完成
+
+![3-15](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_19.png)
+
+##### 图3-15 遍历完成
