--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -97,3 +97,13 @@ d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时
 ![3-15](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_19.png)
 
 ##### 图3-15 遍历完成
+
+单函数组件【逐条读取Excel记录集合】： 使用的函数为getMapByIndex(List sourceList,int iIndex)，需传入单函数组件【读取Excel文件】获取到的Excel记录集合list以及当前计数器索引值，返回当前计数器索引值下的记录map，如图3-16、图3-17所示：
+
+![3-16](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_20.png)
+
+##### 图3-16 填写数据
+
+![3-17](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_21.png)
+
+##### 图3-17 表格选择
