--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -107,3 +107,11 @@ d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时
 ![3-17](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_21.png)
 
 ##### 图3-17 表格选择
+
+单函数组件【获取该条记录中某字段的值】： 使用的函数为getValue(Map paramMap,String fieldName)，需传入当前计数器索引值下的记录map以及字段名F5，如图3-18、图3-19所示：
+
+##### 说明：由于单函数组件【读取Excel文件】中使用的函数getNormalExcelData(File file,int sheetNum)将字段名默认返回为F1,F2...，故Excel表格中【时间】字段对应的字段名即为F5。
+
+![3-18](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_22.png)
+
+##### 图3-18 填写数据
