--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -115,3 +115,13 @@ d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时
 ![3-18](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_22.png)
 
 ##### 图3-18 填写数据
+
+![3-19](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_25.png)
+
+##### 图3-19 表格选择
+
+单函数组件【获取时间字段首个打卡时间】： 使用的函数为left(String str,int len)，用于获取当前记录【时间】字段值的首个打卡时间，需传入【时间】字段值以及从左边截取字符串的长度，因首个时间所占字符数为5，故此处填写5，如图3-20、图3-21所示：
+
+![3-20](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_23.png)
+
+##### 图3-20 填写数据
