--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -125,3 +125,13 @@ d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时
 ![3-20](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_23.png)
 
 ##### 图3-20 填写数据
+
+![3-21](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_24.png)
+
+##### 图3-21 表格选择
+
+单函数组件【按所需格式拼接获取的内容】： 使用的函数为putAll(Map map,Object[] array)，该函数可以将对象数组中的元素全部添加到Map当中，需传入当前计数器索引值的整条记录map以及需添加的对象数组，即打卡记录表中员工的上班时间，如图3-22、图3-23所示：
+
+![3-22](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_26.png)
+
+##### 图3-22 填写数据
