--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -135,3 +135,13 @@ d3）遍历流程： 逐条遍历Excel记录集合，获取每条记录中【时
 ![3-22](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_26.png)
 
 ##### 图3-22 填写数据
+
+![3-23](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_27.png)
+
+##### 图3-23 表格选择
+
+d4）输出结果组件： 用于将最终的结果输出显示，直接引用Excel记录集合list即可，如图3-24、图3-25所示：
+
+![3-24](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_28.png)
+
+##### 图3-24 输出结果组件
