--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -145,3 +145,13 @@ d4）输出结果组件： 用于将最终的结果输出显示，直接引用Ex
 ![3-24](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_28.png)
 
 ##### 图3-24 输出结果组件
+
+![3-25](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_29.png)
+
+##### 图3-25 填写数据
+
+e）流程图设计完成后，保存并退出窗体视图，如图3-26所示：
+
+![3-26](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_30.png)
+
+##### 图3-26 保存并退出
