--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/3. Excel文件解析.md
@@ -155,3 +155,15 @@ e）流程图设计完成后，保存并退出窗体视图，如图3-26所示：
 ![3-26](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_30.png)
 
 ##### 图3-26 保存并退出
+
+f）提交并发布接口，如图3-27所示：
+
+![3-27](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_31.png)
+
+##### 图3-27 提交并发布接口
+
+g）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图3-28所示：
+
+![3-28](https://www.feisuanyz.com/fsimage/alcj-image/excel/excel_32.png)
+
+##### 图3-28 使用测试用例
