--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -5,3 +5,11 @@
 树形结构指的是数据元素之间存在着“一对多”的树形关系的数据结构。本节实例将以常见的试卷选择题（一个题目存在多个选项）作为示例，讲述如何利用全自动开发平台来实现以树形结构展示数据。
 
 ##### 4.1.1 效果展示
+
+![4-1](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_2-1.png)
+
+##### 图4-1 效果展示1
+
+![4-2](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_2-2.png)
+
+##### 图4-2 效果展示2
