--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -13,3 +13,11 @@
 ![4-2](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_2-2.png)
 
 ##### 图4-2 效果展示2
+
+以上仅为后端程序数据展示，用户可自行设计前端Web页面，将后端程序与前端Web页面进行联调，以实现更加美观的展示方式。
+
+##### 4.1.2 准备工作
+
+需提前准备功能实现过程中用到的两张数据表：题目表 title（用来存储题目信息）、选项表option（用来存储选项信息），表结构设计及相关数据如图4-3、图4-4所示：
+
+题目表 title：
