--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -21,3 +21,11 @@
 需提前准备功能实现过程中用到的两张数据表：题目表 title（用来存储题目信息）、选项表option（用来存储选项信息），表结构设计及相关数据如图4-3、图4-4所示：
 
 题目表 title：
+
+```
+CREATE TABLE `title` (
+  `title_id` varchar(24) NOT NULL COMMENT '题目编号',
+  `title_context` varchar(255) DEFAULT NULL COMMENT '题目内容',
+  PRIMARY KEY (`title_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT '题目表';
+```
