--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -29,3 +29,8 @@ CREATE TABLE `title` (
   PRIMARY KEY (`title_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT '题目表';
 ```
+![4-3](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_3-1.png)
+
+##### 图4-3 题目表展示
+
+选项表 option：
