--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -34,3 +34,12 @@ CREATE TABLE `title` (
 ##### 图4-3 题目表展示
 
 选项表 option：
+
+```
+CREATE TABLE `option` (
+  `option_id` varchar(255) NOT NULL COMMENT '选项编号',
+  `option_context` varchar(255) DEFAULT NULL COMMENT '选项内容',
+  `title_id` varchar(255) DEFAULT NULL COMMENT '标题编号',
+  PRIMARY KEY (`option_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT '选项表';
+```
