--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -43,3 +43,7 @@ CREATE TABLE `option` (
   PRIMARY KEY (`option_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT '选项表';
 ```
+
+![4-4](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_3-2.png)
+
+##### 图4-4 选项表展示
