--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -47,3 +47,17 @@ CREATE TABLE `option` (
 ![4-4](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_3-2.png)
 
 ##### 图4-4 选项表展示
+
+##### 4.1.3 流程图设计概览
+
+![4-5](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_4-1.png)
+
+##### 图4-5 流程图
+
+逻辑描述：
+
+a）在【题目表】查询题目信息（SQL语句需确定父子级关系）。
+
+b）在【选项表】查询选项信息（SQL语句需确定父子级关系）。
+
+c）将前面两个单SQL组件查询出来的数据合并为一个List。
