--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -71,3 +71,17 @@ e）输出树型结构拼接完成的信息。
 实现本实例（以树形结构显示数据）的关键在于使用全自动开发平台中的自定义函数-获取树形结构函数getBuildTree，该函数适用于确定了父子级关系的List集合数据中，即：若需使用该函数，需先准备好已确定父子级关系的List集合数据。本实例采用合并两份分别确定了父子级关系的SQL查询记录为一个List集合数据的方式来准备。
 
 ##### 函数说明：获取树形结构函数 List getBuildTree(String parentIdName,String childIdName,List valueList,String childItemName)，如图4-6所示：
+
+![4-6](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_5-1.png)
+
+##### 图4-6 参数描述
+
+##### 4.1.5 操作步骤
+
+a）新增树形结构接口
+
+a1）进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息，如图4-7所示：
+
+![4-7](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-2.png)
+
+##### 图4-7 新增接口
