--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -85,3 +85,9 @@ a1）进入全自动开发平台“接口管理”功能模块，新增接口模
 ![4-7](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-2.png)
 
 ##### 图4-7 新增接口
+
+a2）因本实例不需要配置入口参数，直接单击“提交”，进入下一步模型编辑即可，如图4-8所示：
+
+![4-8](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-3.png)
+
+##### 图4-8 点击提交
