--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -91,3 +91,15 @@ a2）因本实例不需要配置入口参数，直接单击“提交”，进入
 ![4-8](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-3.png)
 
 ##### 图4-8 点击提交
+
+b）模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑），如图4-9、图4-10所示：
+
+![4-9](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-4.png)
+
+##### 图4-9 进入模型编辑
+
+![4-10](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-5.png)
+
+##### 图4-10 进行模型编辑
