--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -111,3 +111,13 @@ c1）在【题目表】查询题目信息（SQL语句需确定父子级关系）
 ##### 说明：使用单SQL组件进行查询，具体SQL内容如下，其中title_id（题目编号）作为题目记录中的子级id，以别名childId作为标识。
 
 ![4-11](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-6.png)
+
+##### 图4-11 使用单SQL组件进行查询
+
+![4-12](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-7.png)
+
+##### 图4-12 填写数据
+
+![4-13](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-8.png)
+
+##### 图4-13 SQL内容
