--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -125,3 +125,9 @@ c1）在【题目表】查询题目信息（SQL语句需确定父子级关系）
 ##### 注意：若对于如何新增SQL语句不清晰，可参见[《SoFlu社区版快速入门教程第4.6节：如何新增SQL信息》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#46-%E5%A6%82%E4%BD%95%E6%96%B0%E5%A2%9Esql%E4%BF%A1%E6%81%AF)
 
 c2）在【选项表】查询选项信息（SQL语句需确定父子级关系），如图4-14、图4-15、图4-16所示：
+
+##### 说明：同样使用单SQL组件进行查询，具体SQL内容如下，其中option_id（选项编号）、title_id（题目编号）分别作为子级id和父级id，以别名childId和parentId进行标识。
+
+![4-14](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-9.png)
+
+##### 图4-14 使用单SQL组件进行查询
