--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -131,3 +131,11 @@ c2）在【选项表】查询选项信息（SQL语句需确定父子级关系）
 ![4-14](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-9.png)
 
 ##### 图4-14 使用单SQL组件进行查询
+
+![4-15](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-10.png)
+
+##### 图4-15 填写数据
+
+![4-16](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-11.png)
+
+##### 图4-16 SQL内容
