--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -139,3 +139,11 @@ c2）在【选项表】查询选项信息（SQL语句需确定父子级关系）
 ![4-16](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-11.png)
 
 ##### 图4-16 SQL内容
+
+c3）将前面两个单SQL组件查询出来的数据合并为一个List，如图4-17、图4-18所示：
+
+##### 说明：使用单函数组件调用函数listAddList(List fromList,List toList)将来源List添加到目标list，其中目标List为第1步查询【题目表】的执行结果、来源List为第2步查询【选项表】的执行结果。
+
+![4-17](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-12.png)
+
+##### 图4-17 合并两个List数据
