--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -167,3 +167,9 @@ c4）使用获取树形结构函数实现功能，如图4-19、图4-20所示：
 c5）输出树型结构拼接完成的信息，如图4-21、图4-22、图4-23所示：
 
 ##### 说明：使用输出结果组件将第4步已获取树形结构的List集合数据输出。
+
+![4-21](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-16.png)
+
+##### 图4-21 使用输出结果组件
+
+![4-22](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-17.png)
