--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -173,3 +173,11 @@ c5）输出树型结构拼接完成的信息，如图4-21、图4-22、图4-23所
 ##### 图4-21 使用输出结果组件
 
 ![4-22](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-17.png)
+
+##### 图4-22 输出结果展示
+
+![4-23](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-18.png)
+
+##### 图4-23 填写数据
+
+d）退出窗体视图
