--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -181,3 +181,11 @@ c5）输出树型结构拼接完成的信息，如图4-21、图4-22、图4-23所
 ##### 图4-23 填写数据
 
 d）退出窗体视图
+
+流程图设计完成后，保存并退出窗体视图，如图4-24所示：
+
+![4-24](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-19.png)
+
+##### 图4-24 保存并退出
+
+e）提交并发布接口
