--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -189,3 +189,11 @@ d）退出窗体视图
 ##### 图4-24 保存并退出
 
 e）提交并发布接口
+
+![4-25](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-20.png)
+
+##### 图4-25 提交并发布接口
+
+f）测试用例
+
+f1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图4-26所示：
