--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -197,3 +197,11 @@ e）提交并发布接口
 f）测试用例
 
 f1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图4-26所示：
+
+![4-26](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-21.png)
+
+##### 图4-26 进行测试用例
+
+f2）编辑测试用例、启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图4-27、图4-28所示：
+
+![4-27](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-23.png)
