--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -213,3 +213,9 @@ f2）编辑测试用例、启用可视化日志（便于查看接口流程中的
 ##### 图4-28 单击执行
 
 f3）通过测试用例响应内容查看接口的执行结果，如图4-29、图4-30、图4-31所示：
+
+![4-29](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-24.png)
+
+##### 图4-29 查看执行结果1
+
+![4-30](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-25.png)
