--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/4. 以树形结构显示数据.md
@@ -231,3 +231,11 @@ f4）若测试用例的结果出现错误，可通过可视化日志双击查看
 ![4-32](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-27.png)
 
 ##### 图4-32 单击可视化日志
+
+![4-33](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-28.png)
+
+##### 图4-33 查看可视化日志
+
+![4-34](https://www.feisuanyz.com/fsimage/alcj-image/treestructure/tree_6-29.png)
+
+##### 图4-34 查询节点数据
