--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -1,1 +1,5 @@
-test
+### 5. 生成操作日志
+
+#### 5.1 生成操作日志
+
+操作日志在每个系统中都是必不可少的，用户在系统中进行每一项操作时，都会调用生成操作日志的程序实时生成对应的操作日志。根据这样的功能特性，可以很好地借助全自动开发平台中的子流程来实现，子流程中专门放置生成操作日志的程序，这样在进行每一项操作时，都会调用该子流程达到生成对应操作日志的效果。下文将为您介绍利用全自动开发平台实现生成操作日志功能的具体操作过程。
