--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -3,3 +3,9 @@
 #### 5.1 生成操作日志
 
 操作日志在每个系统中都是必不可少的，用户在系统中进行每一项操作时，都会调用生成操作日志的程序实时生成对应的操作日志。根据这样的功能特性，可以很好地借助全自动开发平台中的子流程来实现，子流程中专门放置生成操作日志的程序，这样在进行每一项操作时，都会调用该子流程达到生成对应操作日志的效果。下文将为您介绍利用全自动开发平台实现生成操作日志功能的具体操作过程。
+
+##### 5.1.1 效果展示
+
+生成操作日志功能效果：通过执行测试接口，调用生成操作日志子流程，即可实现在数据库中保存用户操作记录，如图5-1所示，本实例仅针对后端程序开发，若与前端页面进行联调，即可实现如图5-2所示的效果。
+
+![5-1](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/2_1.png)
