--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -9,3 +9,9 @@
 生成操作日志功能效果：通过执行测试接口，调用生成操作日志子流程，即可实现在数据库中保存用户操作记录，如图5-1所示，本实例仅针对后端程序开发，若与前端页面进行联调，即可实现如图5-2所示的效果。
 
 ![5-1](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/2_1.png)
+
+##### 图5-1 用户操作日志表记录
+
+![5-2](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/2_2.png)
+
+##### 图5-2 前端页面效果
