--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -15,3 +15,21 @@
 ![5-2](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/2_2.png)
 
 ##### 图5-2 前端页面效果
+
+##### 5.1.2 准备工作
+
+在数据库中准备一张数据表：用户操作日志表sy_log（用于存储用户操作的日志记录），表结构设计及相关数据如下图所示。
+
+用户操作日志表sy_log：
+
+```
+CREATE TABLE `sy_log` (
+  `auto_id` varchar(24) NOT NULL COMMENT '日志编号',
+  `content` varchar(100) DEFAULT NULL COMMENT '内容',
+  `log_type` varchar(50) DEFAULT NULL COMMENT '日志类型(1增加2删除3修改4查询5导出6清除历史数据7备份数据库8登录系统9退出系统)',
+  `log_time` datetime DEFAULT NULL COMMENT '操作时间',
+  `user_id` varchar(24) DEFAULT NULL COMMENT '用户账户',
+  `from_ip` varchar(15) DEFAULT NULL COMMENT '来源ip',
+  PRIMARY KEY (`auto_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='用户操作日志';
+```
