--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -33,3 +33,11 @@ CREATE TABLE `sy_log` (
   PRIMARY KEY (`auto_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='用户操作日志';
 ```
+![5-3](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/3_1.png)
+
+##### 图5-3 用户操作日志表展示
+
+说明：a）用户操作日志表中的数据在执行测试接口后自动生成；b）关于日志类型的具体数值说明，您可以根据实际需求自行定义。
+
+##### 5.1.3 流程图设计概览
+
