--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -41,3 +41,12 @@ CREATE TABLE `sy_log` (
 
 ##### 5.1.3 流程图设计概览
 
+因本实例的实现需要用到子流程，所以以下将为您展示两张流程图设计，即生成操作日志子流程的流程设计和测试接口的流程设计。
+
+a）生成操作日志子流程
+
+![5-4](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/4_1.png)
+
+##### 图5-4 子流程图
+
+逻辑描述：
