--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -50,3 +50,13 @@ a）生成操作日志子流程
 ##### 图5-4 子流程图
 
 逻辑描述：
+
+a1）为用户操作日志赋值，作为新增操作日志的入参；
+
+a2）在用户操作日志表中新增日志记录。
+
+b）测试接口
+
+![5-5](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/4_2.png)
+
+##### 图5-5 测试流程
