--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -60,3 +60,13 @@ b）测试接口
 ![5-5](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/4_2.png)
 
 ##### 图5-5 测试流程
+
+逻辑描述：
+
+b1）获取执行操作的IP地址；
+
+b2）调用生成操作日志子流程，并为入参赋值；
+
+b3）查询【用户操作日志表】中的所有操作日志；
+
+b4）输出操作日志列表。
