--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -70,3 +70,13 @@ b2）调用生成操作日志子流程，并为入参赋值；
 b3）查询【用户操作日志表】中的所有操作日志；
 
 b4）输出操作日志列表。
+
+##### 5.1.4 操作步骤
+
+a）创建实体模型
+
+进入全自动开发平台“实体模型”功能模块，新增一个实体模型SyLog，用于为用户操作日志赋值，如图5-6、图5-7所示：
+
+##### 说明：实体模型设计与用户操作日志表设计一致。
+
+![5-6](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_1.png)
