--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -80,3 +80,13 @@ a）创建实体模型
 ##### 说明：实体模型设计与用户操作日志表设计一致。
 
 ![5-6](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_1.png)
+
+##### 图5-6 实体模型模块
+
+![5-7](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_2.png)
+
+##### 图5-7 新增实体模型
+
+b）创建生成操作日志子流程
+
+b1）填写子流程基本信息
