--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -90,3 +90,13 @@ a）创建实体模型
 b）创建生成操作日志子流程
 
 b1）填写子流程基本信息
+
+进入全自动开发平台“子流程管理”功能模块，新增一个子流程，填写子流程的基本信息，单击“下一步”。
+
+![5-8](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_3.png)
+
+##### 图5-8 子流程管理模块
+
+![5-9](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_4.png)
+
+##### 图5-9 填写子流程基本信息
