--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -100,3 +100,13 @@ b1）填写子流程基本信息
 ![5-9](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_4.png)
 
 ##### 图5-9 填写子流程基本信息
+
+b2）配置子流程入参列表
+
+此处需配置String类型的参数content作为日志内容、Integer类型的参数logType作为日志类型（数字表示：1增加2删除3修改4查询5导出6清除历史数据7备份数据库 8登录系统 9退出系统）、String类型的参数userId作为用户账户编号、String类型的参数fromIp作为来源IP，如图5-10所示：
+
+![5-10](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_5.png)
+
+##### 图5-10 配置入参列表
+
+b3）子流程模型编辑
