--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -110,3 +110,13 @@ b2）配置子流程入参列表
 ##### 图5-10 配置入参列表
 
 b3）子流程模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑），如图5-11、图5-12所示：
+
+![5-11](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_6.png)
+
+##### 图5-11 进入模型编辑
+
+![5-12](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_7.png)
+
+##### 图5-12 组件列表展示
