--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -120,3 +120,11 @@ b3）子流程模型编辑
 ![5-12](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_7.png)
 
 ##### 图5-12 组件列表展示
+
+b4）子流程具体配置展示
+
+b4-1）赋值组件【赋值入参】：用于为实体模型SyLog赋值，故数据模型选择实体模型SyLog，如图5-14所示，具体赋值如图5-15所示。其中autoId（日志编号）的值通过调用函数getUuid()获取；logTime（操作时间）的值通过调用函数getCurrDateTime()获取，其余参数均引用对应的入口参数即可。
+
+![5-13](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_8.png)
+
+##### 图5-13 赋值组件【赋值入参】
