--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -166,3 +166,13 @@ b5-2）提交子流程，如图5-20所示：
 ![5-20](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_15.png)
 
 ##### 图5-20 提交子流程
+
+c）创建测试接口
+
+c1）填写接口基本信息
+
+进入全自动开发平台“接口管理”功能模块，新增一个接口，填写接口的基本信息，如图5-21所示：
+
+![5-21](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_16.png)
+
+##### 图5-21 接口管理功能模块
