--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -176,3 +176,15 @@ c1）填写接口基本信息
 ![5-21](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_16.png)
 
 ##### 图5-21 接口管理功能模块
+
+![5-22](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_17.png)
+
+##### 图5-22 填写接口基本信息
+
+c2）配置接口入口参数
+
+此处需分别配置Body参数和头部参数作为接口入参，来新增用户操作日志表。其中Body参数配置String类型的参数content作为日志内容、Integer类型的参数logType作为日志类型（数字表示：1增加2删除3修改4查询5导出6清除历史数据7备份数据库 8登录系统 9退出系统），如图5-23所示；头部参数配置String类型的userId作为用户账户编号，如图5-24所示：
+
+![5-23](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_18.png)
+
+##### 图5-23 配置Body参数
