--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -188,3 +188,13 @@ c2）配置接口入口参数
 ![5-23](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_18.png)
 
 ##### 图5-23 配置Body参数
+
+![5-24](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_19.png)
+
+##### 图5-24 配置头部参数
+
+c3）模型编辑
+
+与子流程类似。
+
+c4）测试接口具体配置
