--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -198,3 +198,13 @@ c3）模型编辑
 与子流程类似。
 
 c4）测试接口具体配置
+
+c4-1）请求响应参数管理组件【获取IP】：用于获取执行操作的当前IP地址，参数类型选择请求参数，执行方法选择getRemoteAddr()，如图5-26所示：
+
+![5-25](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_20.png)
+
+##### 图5-25 请求响应参数管理组件【获取IP】
+
+![5-26](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_21.png)
+
+##### 图5-26 组件配置
