--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -254,3 +254,13 @@ c4-6）提交并发布接口，如图5-36所示：
 ![5-36](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_30.png)
 
 ##### 图5-36 提交并发布接口
+
+d）测试用例
+
+d1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图5-37所示：
+
+![5-37](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_31.png)
+
+##### 图5-37 使用测试用例
+
+d2）编辑测试用例，如图5-38所示：
