--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -264,3 +264,9 @@ d1）对接口进行测试用例，检验接口实现的功能是否可以达到
 ##### 图5-37 使用测试用例
 
 d2）编辑测试用例，如图5-38所示：
+
+![5-38](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_32.png)
+
+##### 图5-38 编辑测试用例
+
+d3）单击“头部参数”页签，录入用户账户编号，如图5-39所示；单击“Body参数”页签，录入日志类型、日志内容，如图5-40所示，最后启用可视化日志（便于查看接口流程中的数据流转），单击执行即可：
