--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -270,3 +270,11 @@ d2）编辑测试用例，如图5-38所示：
 ##### 图5-38 编辑测试用例
 
 d3）单击“头部参数”页签，录入用户账户编号，如图5-39所示；单击“Body参数”页签，录入日志类型、日志内容，如图5-40所示，最后启用可视化日志（便于查看接口流程中的数据流转），单击执行即可：
+
+![5-39](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_33.png)
+
+##### 图5-39 录入头部参数
+
+![5-40](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_34.png)
+
+##### 图5-40 录入Body参数
