--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/5. 生成操作日志.md
@@ -288,3 +288,13 @@ d4）查看测试用例的响应内容以及用户操作日志表中的记录是
 ![5-42](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_36.png)
 
 ##### 图5-42 查看数据表记录
+
+d5）若测试用例的响应内容出现错误或用户操作日志表中未新增记录，您可以通过双击查看可视化日志中各个组件的节点数据，对接口进行调试，如图5-42、图5-43所示：
+
+![5-42](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_37.png)
+
+##### 图5-42 查看可视化日志
+
+![5-43](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_38.png)
+
+##### 图5-43 查看组件节点数据
