--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -1,1 +1,7 @@
-test
+### 6. 系统站内信推送
+
+#### 6.1 系统站内信推送
+
+系统推送站内信是系统开发中比较常用的功能，后端实现推送站内信的功能是将数据存储到数据库中（新增系统消息表），以方便前端页面调用数据，本节讲述如何使用全自动开发平台开发系统站内信后端功能。
+
+##### 6.1.1 效果展示
