--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -5,3 +5,13 @@
 系统推送站内信是系统开发中比较常用的功能，后端实现推送站内信的功能是将数据存储到数据库中（新增系统消息表），以方便前端页面调用数据，本节讲述如何使用全自动开发平台开发系统站内信后端功能。
 
 ##### 6.1.1 效果展示
+
+![6-1](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/1.png)
+
+##### 图6-1 APP消息模块推送消息界面
+
+上图是APP消息模块推送手工消息的界面展示效果，对于后端开发来说，只需要将数据存储到<系统消息表>中即可，如图6-2所示：
+
+![6-2](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/2.png)
+
+##### 图6-2 系统消息表
