--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -15,3 +15,9 @@
 ![6-2](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/2.png)
 
 ##### 图6-2 系统消息表
+
+##### 6.1.2 准备工作
+
+需提前准备功能实现过程中用到的两张数据表：消息推送节点表 bs_message_node（用来存储消息模版消息）、系统消息表sy_message（用来存储推送消息），表结构设计及相关数据如下图所示：
+
+消息推送节点表 bs_message_node：
