--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -21,3 +21,16 @@
 需提前准备功能实现过程中用到的两张数据表：消息推送节点表 bs_message_node（用来存储消息模版消息）、系统消息表sy_message（用来存储推送消息），表结构设计及相关数据如下图所示：
 
 消息推送节点表 bs_message_node：
+
+```
+CREATE TABLE `bs_message_node` (
+  `send_node_id` varchar(50) NOT NULL COMMENT '推送节点编号',
+  `send_node_name` varchar(100) DEFAULT NULL COMMENT '推送节点名称',
+  `send_context` varchar(200) DEFAULT NULL COMMENT '推送内容',
+  `message_title` varchar(200) DEFAULT NULL COMMENT '消息标题',
+  `message_type` int(11) DEFAULT NULL COMMENT '消息类型',
+  `goto_type` int(11) DEFAULT NULL COMMENT '跳转类别',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',
+  PRIMARY KEY (`send_node_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='消息推送节点表';
+```
