--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -34,3 +34,9 @@ CREATE TABLE `bs_message_node` (
   PRIMARY KEY (`send_node_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='消息推送节点表';
 ```
+
+![6-3](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/3.png)
+
+##### 图6-3 消息推送节点表
+
+消息推送节点表 bs_message_node：
