--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -55,3 +55,20 @@ CREATE TABLE `bs_message_node` (
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='消息推送节点表';
 ```
 
+系统消息表sy_message:
+
+```
+CREATE TABLE `sy_message` (
+  `msg_id` varchar(24) COLLATE utf8_bin NOT NULL COMMENT '消息编号',
+  `is_readed` int(11) DEFAULT NULL COMMENT '是否已查阅',
+  `title` varchar(100) COLLATE utf8_bin DEFAULT NULL COMMENT '消息标题',
+  `context` varchar(100) COLLATE utf8_bin DEFAULT NULL COMMENT '消息内容',
+  `message_type` int(11) DEFAULT NULL COMMENT '消息类型',
+  `goto_type` int(11) DEFAULT NULL COMMENT '跑转类别',
+  `relation_id` varchar(24) COLLATE utf8_bin DEFAULT NULL COMMENT '关联编号',
+  `receive_user` varchar(24) COLLATE utf8_bin DEFAULT NULL COMMENT '接收人',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',
+  `create_user` varchar(24) COLLATE utf8_bin DEFAULT NULL COMMENT '创建人',
+ PRIMARY KEY (`msg_id`)
+ )ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_bin COMMENT='系统消息表';
+```
