--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -72,3 +72,13 @@ CREATE TABLE `sy_message` (
  PRIMARY KEY (`msg_id`)
  )ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_bin COMMENT='系统消息表';
 ```
+
+![6-4](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/4.png)
+
+##### 图6-4 系统消息表
+
+##### 6.1.3 流程图设计概述
+
+![6-5](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/5.png)
+
+##### 图6-5 流程图
