--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -82,3 +82,13 @@ CREATE TABLE `sy_message` (
 ![6-5](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/5.png)
 
 ##### 图6-5 流程图
+
+逻辑概述：
+
+a）系统消息分为系统自动发送的消息和管理员手工发送的消息，通过sendNodeId(推送节点编号)来判断推送消息方式，为空发送手工消息，不为空发送模版消息。
+
+b）发送手工消息时，通过赋值组件对SyMessage实体模型字段进行赋值，然后调用新增SQL对表进行批量新增操作。
+
+c）发送模版消息时，需要先根据sendNodeId(推送节点编号)查询<消息推送节点表 bs_message_node>中的message_title、message_type、send_context、goto_type字段信息。
+
+d）使用按模板生成文本内容函数，将查询到的send_context内容中的‘{}’参数用入参params参数列表替换文本，然后赋值到SyMessage实体模型，根据不同接收人，将各个不同map放到一个初始化list中，最后执行批量新增SQL操作。
