--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -101,3 +101,13 @@ newList()：创建一个List；
 splitStrToListString(String,String) ：将字符串按分隔符转换为List；
 
 listSize(List) ：取List大小；
+
+newMapPutAll(Map sourceMap) ：将源MAP全量赋值一个新MAP中；
+
+listAddValue(List fromList,Map addMap)： 将MAP添加到List到末尾；
+
+newMapInit(Object[])：新建Map，初始化字段值；
+
+jsonStrToMap(String json)： JSON转Map；
+
+getTextByTemplate(String msgTemplate,Map paramsValue)：按模板生成文本内容。
