--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -111,3 +111,15 @@ newMapInit(Object[])：新建Map，初始化字段值；
 jsonStrToMap(String json)： JSON转Map；
 
 getTextByTemplate(String msgTemplate,Map paramsValue)：按模板生成文本内容。
+
+##### 6.1.5 操作步骤
+
+a）创建实体模型
+
+进入全自动开发平台“实体模型”功能模块，创建SyMessage（系统信息）实体模型，用于后续系统信息的赋值操作，如图6-6、图6-7所示：
+
+![6-6](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/7.png)
+
+##### 图6-6 选择实体模型
+
+![6-7](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/8.png)
