--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -123,3 +123,13 @@ a）创建实体模型
 ##### 图6-6 选择实体模型
 
 ![6-7](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/8.png)
+
+##### 图6-7 创建SyMessage实体模型
+
+##### 注意：若对于如何新增实体模型不清晰，可参见[《SoFlu社区版基础操作指南第12章：实体模型》](https://gitee.com/feisuanyz/SoFlu-adp/tree/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B)
+
+b）创建接口：新增站内信推送
+
+b1）接口管理：新增接口（配置接口名称、路径等基本信息），如图6-8、图6-9所示：
+
+![6-8](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/9.png)
