--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -133,3 +133,13 @@ b）创建接口：新增站内信推送
 b1）接口管理：新增接口（配置接口名称、路径等基本信息），如图6-8、图6-9所示：
 
 ![6-8](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/9.png)
+
+##### 图6-8 选择接口管理
+
+![6-9](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/10.png)
+
+##### 图6-9 配置接口参数
+
+b2）接口入参：配置请求参数、头部参数(按下列参数列表新增参数)，如图6-10、图6-11所示：
+
+![6-10](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/11.png)
