--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -143,3 +143,11 @@ b1）接口管理：新增接口（配置接口名称、路径等基本信息）
 b2）接口入参：配置请求参数、头部参数(按下列参数列表新增参数)，如图6-10、图6-11所示：
 
 ![6-10](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/11.png)
+
+##### 图6-10 配置Body参数
+
+![6-11](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/12.png)
+
+##### 图6-11 配置头部参数
+
+c）模型编辑
