--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/2. 常见案例/6. 系统站内信推送.md
@@ -161,3 +161,13 @@ c）模型编辑
 ![6-13](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/14.png)
 
 ##### 图6-13 编辑流程图
+
+d）组件的具体配置
+
+d1）使用单函数组件调用函数，处理请求参数
+
+d1.1）调用newArrayList()函数创建一个List，创建一个ArrayList，如图6-14、图6-15所示：
+
+![6-14](https://www.feisuanyz.com/fsimage/alcj-image/systemmessage/15.png)
+
+##### 图6-14 创建一个List
